# quoco

./: .gitignore  README.md  app.py  document_config.json  example_config.toml  log_app.py  requirements.txt  setup.cfg
.github/workflows/: black-lint.yml
journal/: .gitignore  lj.py
log/: log.txt  secure_term.py
perora/: document.py  document_manager.py  fs_util.py  journal.py  manager.py  plan.py  secure_fs_io.py  secure_term.py  spec.py  util.py
perora/util/: fs.py
plan/design/: .gitignore  beliefs.md  content_list.md  context_vs_focus.md  decisions.md  focus.md  goals.md  ideas.md  main.md  my_perfect_day.md  phases.md  research.md  session_types.md  swap_space.md  systems.md  task_categorization_exercise.md  time_tracking.md
plan/design/drawings/: diagrams.kra
plan/development/: api.md  development_issues.md  document_api.md  spec.md
plan/development/research_notes/: john_mumm_crdt_primer.md  marc_shapiro_convergent_commutative_replicated_data_types_paper.md  rgasplit_paper.md
plan_templates/: d.md
proto/: assignments_manager_snippets.py
quoco/: app.py  document.py  plan.py  quocofs_manager.py  quocofs_migration.py  secure_fs_io.py
quoco/util/: fs.py  secure_term.py  term.py
spec/: config.json  sj.py
tests/quocofs/: test_encryption.py  test_hashes.py  test_names.py
