[metadata]
name = lifesystem
version = 0.1
url = https://github.com/vinhowe/lifesystem
license = MIT
author = Vin Howe
author_email = me@howe.vin
description = Suite of personal organizational tools

[options]
packages =
    perora
scripts =
    bin/plan
install_requires =
    cryptography
    google-cloud-storage
    watchdog
    requests
    python-dateutil
