[metadata]
name = quoco
version = 0.1
url = https://github.com/vinhowe/quoco
license = MIT
author = Vin Howe
author_email = me@howe.vin
description = Suite of personal organizational tools

[options]
packages =
    quoco
    quoco.util
scripts =
    bin/plan
install_requires =
    python-dateutil
    quocofs @ git+https://github.com/vinhowe/quocofs.git#subdirectory=pylib
    xdg
    tomli
